fixed: some letters are cropped on the bottom

--- a/js/app/restaurant/restaurant-card.scss
+++ b/js/app/restaurant/restaurant-card.scss
@@ -90,6 +90,7 @@
       white-space: nowrap;
       overflow: hidden;
       text-overflow: ellipsis;
+      line-height: inherit;
     }
 
     .details {
